--- a/Lab 3/smart-room-assistant/react/react_module/index.html
+++ b/Lab 3/smart-room-assistant/react/react_module/index.html
@@ -7,7 +7,11 @@
     <title>Vite + React</title>
   </head>
   <body>
+      <div className="bg-blue-500 text-white p-4">
+        <h1 className="text-2xl font-bold">Tailwind!</h1>
+      </div>
     <div id="root"></div>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
